# dictnet_data

cambridge_sense_000/: MANIFEST.in  pyproject.toml  setup.cfg
cambridge_sense_000/cambridge_sense_000/: __init__.py
