[metadata]
name = cambridge_sense_000
version = 0.0.1
author = Simon Lee
author_email = simon2020291@gmail.com
description = cambridge.sense.000 data for dictnet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nlpersimon/cambridge_sense_000
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True